<resources>
    <string name="app_name">House Rent App</string>
    <string name="copyright">Copyright © 2022 - Rohit Kadu</string>
    <string name="tagline">Find Your Dream Rental Property Here</string>s
    <string name="admin_txt">Admin</string>
    <string name="user_txt">User</string>
    <string name="select_role_txt">Select Role</string>
    <string name="email_address_hint">someone@example.com</string>
    <string name="email_et_txt">Email Address</string>
    <string name="password_et_txt">Password</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="welcome_back_txt">Welcome Back</string>
    <string name="register_btn_txt">Register</string>
    <string name="signin_to_register_txt">Don\'t have an account?</string>
    <string name="or_line">------------------------ OR --------------------------</string>
    <string name="txt_sign_in_using">Sign In Using :</string>
    <string name="txt_full_name_newuser">Full Name</string>
    <string name="txt_mobile_number_newuser">Mobile Number</string>
    <string name="newuser_txt">New User</string>
    <string name="existinguser_txt">Existing User</string>
    <string name="select_user_txt">Select User</string>
    <string name="sign_out_btn_txt">Sign Out</string>
    <string name="continue_btn_txt">Continue</string>
    <string name="select_city_txt">Select City</string>
</resources>