<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:backgroundTint="@color/dark_grey"
    tools:context=".activity_login_admin">

    <TextView
        android:id="@+id/id_txt_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/welcome_back_txt"
        android:textColor="@color/white"
        android:textSize="40sp">

    </TextView>

    <TextView
        android:id="@+id/id_welcome_admin_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_txt_welcome_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/user_txt"
        android:textColor="@color/white"
        android:textSize="40sp">
    </TextView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/id_user_login_animation"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_below="@id/id_welcome_admin_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/user_login_activity_lottieanimation">
    </com.airbnb.lottie.LottieAnimationView>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/id_user_login_animation"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:drawableTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/email_et_txt"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp">
    </EditText>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/email_et"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="100dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableTint="@color/white"
        android:drawablePadding="12dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password_et_txt"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp">
    </EditText>


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/password_et"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="-80dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#FFF5F5"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_in_btn_txt"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp">
    </Button>

    <TextView
        android:id="@+id/or_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_in"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/or_line"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:id="@+id/id_donthaveanaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/signin_to_register_txt"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/sign_in_using"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/or_line"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/txt_sign_in_using"
        android:textColor="@color/white"
        android:textSize="25sp">

    </TextView>

    <ImageView
        android:id="@+id/img_google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/or_line"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/sign_in_using"
        android:src="@drawable/google_logo">
    </ImageView>
    <TextView
        android:id="@+id/id_linkto_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/id_donthaveanaccount"
        android:fontFamily="@font/roboto_black"
        android:text=" Register"
        android:textColor="@color/white">
    </TextView>
</RelativeLayout>