<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_typeofuser"
    android:background="@color/dark_grey">

    <RelativeLayout
        android:id="@+id/center_horizontal_ref_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/select_user_txt"
        android:textColor="@color/white"
        android:textSize="50sp">
    </TextView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_newuser"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_above="@+id/center_horizontal_ref_line"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"
        app:cardBackgroundColor="@color/grey_overlay"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/id_newuser_seleceuser_lottieanim"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/newuser_selectuser_lottieanimation">
        </com.airbnb.lottie.LottieAnimationView>

        <!--        <ImageView-->
        <!--            android:id="@+id/id_typeofuser_admin_icon"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:src="@drawable/ic_launcher_background">-->
        <!--        </ImageView>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/newuser_txt"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">
        </TextView>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_existinguser"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_below="@+id/center_horizontal_ref_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/grey_overlay"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/id_existinguser_selectuser_lottieanim"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/existinguser_selectuser_lottieanimation">
            </com.airbnb.lottie.LottieAnimationView>

        </RelativeLayout>
        <!--        <ImageView-->
        <!--            android:id="@+id/id_typeofuser_user_icon"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:src="@drawable/ic_launcher_background">-->
        <!--        </ImageView>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/existinguser_txt"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">
        </TextView>
    </androidx.cardview.widget.CardView>




</RelativeLayout>